[metadata]
name = mhg-gnn
version = attr: .__version__
description = Package for mhg-gnn
author= team
long_description_content_type=text/markdown
long_description = file: README.md
python_requires = >= 3.9.7 
license = TBD

classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
	networkx>=2.8
	numpy>=1.23.5, <2.0.0
	pandas>=1.5.3
	rdkit-pypi>=2022.9.4, <2023.9.6
	torch>=2.0.0
	torchinfo>=1.8.0
	torch-geometric>=2.3.1
	requests>=2.32.2
	scikit-learn>=1.5.0
	urllib3>=2.2.2


setup_requires =
    setuptools
package_dir =
    = .
packages=find:
include_package_data = True

[options.packages.find]
where = .
